# trabajo_edm

./: .gitignore  README.md  main.py  main_opt.py  pagina.py  pyproject.toml  requirements.txt
app/: 2_Idea_Presentation.py  home.py  nav.py  styles.css  utils.py
app/pages/: 1_Implementation.py  2_Idea_Presentation.py  Implementación.py  Planificador.py
data/: fonts_publiques.csv  itinerarios-ciclistas-itineraris-ciclistes.geojson  valenbisi_disponibilitat.csv  valenbisi_stations.geojson  valenbisi_stations_cycle.geojson  valenbisi_stations_walk.geojson  valencia_cycling_network.graphml  valencia_cycling_sombra.graphml
notebooks/: creacion_ruta.ipynb  creacion_sombra.ipynb  descarga_archivo.ipynb  obtencion_temp.ipynb  pruebas_sombra.ipynb  ruta_valenbisi.ipynb
src/: fountains.py  fuentes.py  routes.py  temperature.py  utils.py
