[project]
name = "trabajo-edm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "auth>=0.5.3",
    "folium>=0.19.7",
    "geopandas>=1.1.0",
    "geopy>=2.4.1",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.3",
    "osmnx>=2.0.4",
    "pandas>=2.3.0",
    "requests>=2.32.4",
    "scikit-learn>=1.7.0",
    "shapely>=2.1.1",
    "streamlit>=1.45.1",
    "streamlit-folium>=0.25.0",
    "tqdm>=4.67.1",
]
