[project]
name = "trabajo-edm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "folium>=0.20.0",
    "gdown>=5.2.0",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.3",
    "openmeteo-requests>=1.5.0",
    "osmnx>=2.0.4",
    "pandas>=2.3.0",
    "requests-cache>=1.2.1",
    "retry-requests>=2.0.0",
    "scikit-learn>=1.7.0",
    "scipy>=1.15.3",
    "shapely>=2.1.1",
    "streamlit>=1.46.0",
    "streamlit-folium>=0.25.0",
    "streamlit-option-menu>=0.4.0",
]
